--- a/pppppp/View/ProfileData/ProfileView.storyboard
+++ b/pppppp/View/ProfileData/ProfileView.storyboard
@@ -49,7 +49,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIj-nq-XZN">
-                                <rect key="frame" x="104" y="143" width="0.0" height="72"/>
+                                <rect key="frame" x="112" y="151" width="0.0" height="72"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="72" id="hnD-K8-PCv"/>
                                 </constraints>
@@ -58,7 +58,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ENr-7I-fkB">
-                                <rect key="frame" x="0.0" y="274" width="390" height="487"/>
+                                <rect key="frame" x="0.0" y="294" width="390" height="467"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Vj1-VL-8NM">
@@ -70,10 +70,10 @@
                                 <cells/>
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gji-DF-TMj">
-                                <rect key="frame" x="0.0" y="274" width="390" height="487"/>
+                                <rect key="frame" x="0.0" y="294" width="390" height="467"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="J3b-i7-ahx">
-                                        <rect key="frame" x="0.0" y="190.66666666666671" width="390" height="296.33333333333326"/>
+                                        <rect key="frame" x="0.0" y="206.66666666666671" width="390" height="260.33333333333326"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </tableView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CALENDER GRASS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jPb-GB-oHC">
@@ -98,7 +98,7 @@
                                         <cells/>
                                     </collectionView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RECENT ACTIVITIES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bY7-tD-DRw">
-                                        <rect key="frame" x="24" y="169.66666666666669" width="139" height="17"/>
+                                        <rect key="frame" x="24" y="185.66666666666669" width="139" height="17"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="0.72999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -112,14 +112,14 @@
                                     <constraint firstItem="jPb-GB-oHC" firstAttribute="top" secondItem="Gji-DF-TMj" secondAttribute="top" id="EOf-vE-Jk2"/>
                                     <constraint firstItem="J3b-i7-ahx" firstAttribute="leading" secondItem="Gji-DF-TMj" secondAttribute="leading" id="ShC-Tg-Zi3"/>
                                     <constraint firstItem="J3b-i7-ahx" firstAttribute="top" secondItem="bY7-tD-DRw" secondAttribute="bottom" constant="4" id="Ubr-vb-HmH"/>
-                                    <constraint firstItem="bY7-tD-DRw" firstAttribute="top" secondItem="lAc-Rk-I35" secondAttribute="bottom" constant="8" id="Wgw-f0-FQS"/>
+                                    <constraint firstItem="bY7-tD-DRw" firstAttribute="top" secondItem="lAc-Rk-I35" secondAttribute="bottom" constant="24" id="Wgw-f0-FQS"/>
                                     <constraint firstItem="lAc-Rk-I35" firstAttribute="centerX" secondItem="Gji-DF-TMj" secondAttribute="centerX" id="YOE-aE-1c6"/>
                                     <constraint firstAttribute="trailing" secondItem="J3b-i7-ahx" secondAttribute="trailing" id="jwq-WP-UFA"/>
                                     <constraint firstAttribute="bottom" secondItem="J3b-i7-ahx" secondAttribute="bottom" id="kog-iV-K7I"/>
                                 </constraints>
                             </view>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CQd-fR-N3q">
-                                <rect key="frame" x="24" y="235" width="342" height="32"/>
+                                <rect key="frame" x="24" y="243" width="342" height="32"/>
                                 <segments>
                                     <segment title="Activity"/>
                                     <segment title="FriendList"/>
@@ -130,7 +130,7 @@
                                 </connections>
                             </segmentedControl>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iSb-Ii-EMn">
-                                <rect key="frame" x="16" y="143" width="72" height="72"/>
+                                <rect key="frame" x="24" y="151" width="72" height="72"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="72" id="Xvi-NF-3lX"/>
@@ -138,7 +138,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="taJ-vF-fMd">
-                                <rect key="frame" x="294" y="161.66666666666666" width="80" height="34.666666666666657"/>
+                                <rect key="frame" x="294" y="169.66666666666666" width="80" height="34.666666666666657"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" imagePlacement="leading" title="Edit" imagePadding="9" cornerStyle="capsule">
                                     <imageReference key="image" image="pencil" catalog="system" symbolScale="medium" renderingMode="hierarchical-single">
@@ -164,17 +164,17 @@
                             <constraint firstItem="A8q-9m-zwg" firstAttribute="trailing" secondItem="CQd-fR-N3q" secondAttribute="trailing" constant="24" id="3vl-E1-4s8"/>
                             <constraint firstItem="A8q-9m-zwg" firstAttribute="trailing" secondItem="taJ-vF-fMd" secondAttribute="trailing" constant="16" id="6Jl-eE-hK4"/>
                             <constraint firstItem="iSb-Ii-EMn" firstAttribute="centerY" secondItem="taJ-vF-fMd" secondAttribute="centerY" id="7rp-L3-Ubw"/>
-                            <constraint firstItem="Gji-DF-TMj" firstAttribute="top" secondItem="CQd-fR-N3q" secondAttribute="bottom" constant="8" symbolic="YES" id="CDo-yy-8BN"/>
+                            <constraint firstItem="Gji-DF-TMj" firstAttribute="top" secondItem="CQd-fR-N3q" secondAttribute="bottom" constant="20" id="CDo-yy-8BN"/>
                             <constraint firstItem="Gji-DF-TMj" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" id="Dn2-ug-xWw"/>
                             <constraint firstItem="ENr-7I-fkB" firstAttribute="trailing" secondItem="A8q-9m-zwg" secondAttribute="trailing" id="InK-Ss-jon"/>
-                            <constraint firstItem="iSb-Ii-EMn" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" constant="16" id="TIT-r7-FeB"/>
-                            <constraint firstItem="iSb-Ii-EMn" firstAttribute="top" secondItem="A8q-9m-zwg" secondAttribute="top" id="U6e-VE-Hvv"/>
+                            <constraint firstItem="iSb-Ii-EMn" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" constant="24" id="TIT-r7-FeB"/>
+                            <constraint firstItem="iSb-Ii-EMn" firstAttribute="top" secondItem="A8q-9m-zwg" secondAttribute="top" constant="8" id="U6e-VE-Hvv"/>
                             <constraint firstItem="CQd-fR-N3q" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" constant="24" id="V9e-a1-QSi"/>
-                            <constraint firstItem="qIj-nq-XZN" firstAttribute="top" secondItem="A8q-9m-zwg" secondAttribute="top" id="XA6-vg-JzP"/>
+                            <constraint firstItem="qIj-nq-XZN" firstAttribute="top" secondItem="HJr-r8-Ssq" secondAttribute="topMargin" constant="8" id="Yfo-G7-hFR"/>
                             <constraint firstItem="CQd-fR-N3q" firstAttribute="top" secondItem="iSb-Ii-EMn" secondAttribute="bottom" constant="20" id="cSC-OT-nqS"/>
                             <constraint firstItem="ENr-7I-fkB" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" id="eAN-UK-E1n"/>
                             <constraint firstItem="qIj-nq-XZN" firstAttribute="leading" secondItem="iSb-Ii-EMn" secondAttribute="trailing" constant="16" id="fhs-Zp-RSl"/>
-                            <constraint firstItem="ENr-7I-fkB" firstAttribute="top" secondItem="CQd-fR-N3q" secondAttribute="bottom" constant="8" id="mmH-Zb-yBW"/>
+                            <constraint firstItem="ENr-7I-fkB" firstAttribute="top" secondItem="CQd-fR-N3q" secondAttribute="bottom" constant="20" id="mmH-Zb-yBW"/>
                             <constraint firstItem="Gji-DF-TMj" firstAttribute="trailing" secondItem="A8q-9m-zwg" secondAttribute="trailing" id="wpj-GD-nos"/>
                             <constraint firstItem="A8q-9m-zwg" firstAttribute="bottom" secondItem="ENr-7I-fkB" secondAttribute="bottom" id="z4M-QH-4Sj"/>
                         </constraints>
