--- a/pppppp/View/ProfileData/UserDataView.storyboard
+++ b/pppppp/View/ProfileData/UserDataView.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hDW-VP-yiq">
-                                <rect key="frame" x="32.5" y="274" width="349" height="140.5"/>
+                                <rect key="frame" x="32.5" y="197" width="349" height="140.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="349" id="Lbb-Nl-yCb"/>
@@ -37,88 +37,69 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PROFILE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n1a-Nd-fct">
-                                <rect key="frame" x="16" y="88" width="59" height="17"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                <color key="textColor" white="1" alpha="0.72999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ds-zJ-VQB">
-                                <rect key="frame" x="16" y="109" width="382" height="128"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zN3-6Y-4Ki">
-                                        <rect key="frame" x="16" y="16" width="96" height="96"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="96" id="eXD-sf-NEn"/>
-                                            <constraint firstAttribute="width" constant="96" id="emn-Un-IgE"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fO5-2g-eea">
-                                        <rect key="frame" x="256" y="64" width="110" height="0.0"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="110" id="Bs3-3v-Kan"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="24"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUz-qN-ait">
-                                        <rect key="frame" x="131" y="64" width="120" height="0.0"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="120" id="9GF-YT-NRr"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="0.16" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="lUz-qN-ait" firstAttribute="centerX" secondItem="2Ds-zJ-VQB" secondAttribute="centerX" id="0Yi-O6-3Tw"/>
-                                    <constraint firstAttribute="bottom" secondItem="zN3-6Y-4Ki" secondAttribute="bottom" constant="16" id="7Qs-bD-dQg"/>
-                                    <constraint firstItem="zN3-6Y-4Ki" firstAttribute="leading" secondItem="2Ds-zJ-VQB" secondAttribute="leading" constant="16" id="ChC-qx-iBU"/>
-                                    <constraint firstItem="zN3-6Y-4Ki" firstAttribute="top" secondItem="2Ds-zJ-VQB" secondAttribute="top" constant="16" id="JHE-a6-49U"/>
-                                    <constraint firstAttribute="trailing" secondItem="fO5-2g-eea" secondAttribute="trailing" constant="16" id="Jt8-iW-mHZ"/>
-                                    <constraint firstItem="lUz-qN-ait" firstAttribute="centerY" secondItem="2Ds-zJ-VQB" secondAttribute="centerY" id="N5E-7V-8Kb"/>
-                                    <constraint firstItem="fO5-2g-eea" firstAttribute="centerY" secondItem="2Ds-zJ-VQB" secondAttribute="centerY" id="SqC-cu-BSE"/>
-                                </constraints>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CALENDER GRASS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rks-Ew-QDE">
-                                <rect key="frame" x="16" y="253" width="129" height="17"/>
+                                <rect key="frame" x="16" y="176" width="129" height="17"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="0.72999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RECENT ACTIVITIES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yLe-69-o6z">
-                                <rect key="frame" x="16" y="430.5" width="139" height="17"/>
+                                <rect key="frame" x="16" y="361.5" width="139" height="17"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="0.72999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUz-qN-ait">
+                                <rect key="frame" x="112" y="80" width="0.0" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="72" id="CI7-ta-TQ3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zN3-6Y-4Ki">
+                                <rect key="frame" x="24" y="80" width="72" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="72" id="eXD-sf-NEn"/>
+                                    <constraint firstAttribute="width" constant="72" id="emn-Un-IgE"/>
+                                </constraints>
+                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gX8-jP-2Ng">
-                                <rect key="frame" x="0.0" y="451.5" width="414" height="410.5"/>
+                                <rect key="frame" x="0.0" y="382.5" width="414" height="479.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fO5-2g-eea">
+                                <rect key="frame" x="272" y="80" width="110" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="110" id="Bs3-3v-Kan"/>
+                                    <constraint firstAttribute="height" constant="72" id="xda-1M-v7p"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fRL-5J-ecb"/>
                         <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="fRL-5J-ecb" firstAttribute="trailing" secondItem="2Ds-zJ-VQB" secondAttribute="trailing" constant="16" id="2zv-HM-XNz"/>
-                            <constraint firstItem="n1a-Nd-fct" firstAttribute="leading" secondItem="fRL-5J-ecb" secondAttribute="leading" constant="16" id="7Hg-hF-LWI"/>
-                            <constraint firstItem="yLe-69-o6z" firstAttribute="top" secondItem="hDW-VP-yiq" secondAttribute="bottom" constant="16" id="96h-fD-uYL"/>
+                            <constraint firstItem="yLe-69-o6z" firstAttribute="top" secondItem="hDW-VP-yiq" secondAttribute="bottom" constant="24" id="96h-fD-uYL"/>
+                            <constraint firstItem="fRL-5J-ecb" firstAttribute="trailing" secondItem="fO5-2g-eea" secondAttribute="trailing" constant="32" id="IUo-Ct-6An"/>
                             <constraint firstItem="Rks-Ew-QDE" firstAttribute="leading" secondItem="fRL-5J-ecb" secondAttribute="leading" constant="16" id="K9j-Tp-8ul"/>
                             <constraint firstItem="gX8-jP-2Ng" firstAttribute="top" secondItem="yLe-69-o6z" secondAttribute="bottom" constant="4" id="KfD-aI-XCh"/>
-                            <constraint firstItem="2Ds-zJ-VQB" firstAttribute="leading" secondItem="fRL-5J-ecb" secondAttribute="leading" constant="16" id="NtR-3P-GsE"/>
-                            <constraint firstItem="Rks-Ew-QDE" firstAttribute="top" secondItem="2Ds-zJ-VQB" secondAttribute="bottom" constant="16" id="PSD-vI-jAa"/>
                             <constraint firstItem="hDW-VP-yiq" firstAttribute="top" secondItem="Rks-Ew-QDE" secondAttribute="bottom" constant="4" id="Qwk-Qd-TUj"/>
-                            <constraint firstItem="n1a-Nd-fct" firstAttribute="top" secondItem="fRL-5J-ecb" secondAttribute="top" constant="40" id="SdJ-wc-FIC"/>
+                            <constraint firstItem="lUz-qN-ait" firstAttribute="top" secondItem="fRL-5J-ecb" secondAttribute="top" constant="32" id="SC7-Fg-x9A"/>
                             <constraint firstItem="gX8-jP-2Ng" firstAttribute="leading" secondItem="fRL-5J-ecb" secondAttribute="leading" id="bHY-uW-rlF"/>
-                            <constraint firstItem="2Ds-zJ-VQB" firstAttribute="top" secondItem="n1a-Nd-fct" secondAttribute="bottom" constant="4" id="brG-u1-nS4"/>
+                            <constraint firstItem="zN3-6Y-4Ki" firstAttribute="leading" secondItem="fRL-5J-ecb" secondAttribute="leading" constant="24" id="cib-qt-AQg"/>
+                            <constraint firstItem="zN3-6Y-4Ki" firstAttribute="top" secondItem="fRL-5J-ecb" secondAttribute="top" constant="32" id="gNN-xF-1cK"/>
                             <constraint firstItem="hDW-VP-yiq" firstAttribute="centerX" secondItem="tfG-lV-zO7" secondAttribute="centerX" id="h0U-C5-n7p"/>
+                            <constraint firstItem="fO5-2g-eea" firstAttribute="top" secondItem="fRL-5J-ecb" secondAttribute="top" constant="32" id="h8r-Na-pxe"/>
                             <constraint firstItem="fRL-5J-ecb" firstAttribute="trailing" secondItem="gX8-jP-2Ng" secondAttribute="trailing" id="o0T-Lh-dYP"/>
                             <constraint firstItem="gX8-jP-2Ng" firstAttribute="bottom" secondItem="fRL-5J-ecb" secondAttribute="bottom" id="rbC-j2-aMT"/>
+                            <constraint firstItem="Rks-Ew-QDE" firstAttribute="top" secondItem="zN3-6Y-4Ki" secondAttribute="bottom" constant="24" id="sfW-h2-lze"/>
                             <constraint firstItem="yLe-69-o6z" firstAttribute="leading" secondItem="fRL-5J-ecb" secondAttribute="leading" constant="16" id="vSx-fS-hVd"/>
+                            <constraint firstItem="lUz-qN-ait" firstAttribute="leading" secondItem="zN3-6Y-4Ki" secondAttribute="trailing" constant="16" id="zsN-df-nQv"/>
                         </constraints>
                     </view>
                     <connections>
@@ -126,13 +107,12 @@
                         <outlet property="iconView" destination="zN3-6Y-4Ki" id="wW2-qj-GBY"/>
                         <outlet property="nameLabel" destination="lUz-qN-ait" id="3Wb-Sg-aW1"/>
                         <outlet property="pointLabel" destination="fO5-2g-eea" id="nLt-lg-wLK"/>
-                        <outlet property="profileBackgroundView" destination="2Ds-zJ-VQB" id="fX6-7z-1DN"/>
                         <outlet property="tableView" destination="gX8-jP-2Ng" id="UFf-XU-GQf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l30-SR-EtX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5146" y="429"/>
+            <point key="canvasLocation" x="5143.4782608695659" y="428.57142857142856"/>
         </scene>
     </scenes>
     <resources>
